Fixed pocketbok-field div height for landscape orientation on mobile

--- a/client/src/components/Modal/style.css
+++ b/client/src/components/Modal/style.css
@@ -112,7 +112,7 @@
 
 #pocketbook-field {
     overflow-y: scroll;
-    height:400px;
+    height:350px;
     padding-bottom: 40px;
 }
 
